--- a/MenuFloaters/Directory.Build.props
+++ b/MenuFloaters/Directory.Build.props
@@ -27,4 +27,8 @@
     <GenerateManifest>true</GenerateManifest>
   </PropertyGroup>
   
+  <PropertyGroup>
+    <DisableZipRelease>false</DisableZipRelease>
+  </PropertyGroup>
+  
 </Project>
